# dupcheck

./: .env.example  .gitignore  PITCH.md  README.md  SKILL.md  SUBMISSION.md  pyproject.toml  render.yaml
app/: main.py  models.py  registry_client.py  similarity.py
tests/: test_registry_client.py  test_routes.py  test_similarity.py
